css/ModelAdmin.css
.clear{
	display: block;
	clear: both;
}

body.ModelAdmin #left {
	width: 270px;
	overflow: auto;
}

body.ModelAdmin #Form_AddForm fieldset {
	border: none;
}

body.ModelAdmin #Form_AddForm #ClassName {
	margin: 0;
	padding: auto;
	width: auto;
}

body.ModelAdmin #Form_AddForm #ClassName label {
	display: none;
}

body.ModelAdmin #SearchForm_holder,
body.ModelAdmin #AddForm_holder {
	padding: 1em;
}

body.ModelAdmin #SearchForm_holder {
	overflow: auto;
	margin-bottom:1em;
}

body.ModelAdmin #ModelClassSelector {
    border-bottom: 1px #AAA solid;
    padding-bottom: 0.5em;
}


body.ModelAdmin #SearchForm_holder div.ResultAssemblyBlock{
	margin-bottom: 1em;
}

body.ModelAdmin #SearchForm_holder form div.field.hidden{
	display: none;
}

body.ModelAdmin #SearchForm_holder form div#ResultAssembly{
	margin: 0;
	display: block;
	clear: both;
}
	body.ModelAdmin #SearchForm_holder form div#ResultAssembly label{
		width: auto;
		clear: both;
		margin: 0px;
	}

	body.ModelAdmin #SearchForm_holder form div#ResultAssembly ul.optionset li{
		float: left;
		width: 45%;
	}

body.ModelAdmin #ResultTable_holder {
	overflow:auto;
}

body.ModelAdmin #right{
	overflow:auto !important;
}

body.ModelAdmin #right #ModelAdminPanel {
	padding-bottom: 30px;
}

body.ModelAdmin #right table.results {
	margin:6px;
	padding:0;
	border-spacing:0 2px;
}

body.ModelAdmin #right table.results td {
	font-size:12px;
	font-weight:bold;
	background-color:#fff;
	padding:2px;
}

body.ModelAdmin #right table.results td.over {
	background-color:#bbb;
	cursor:pointer;
}

body.ModelAdmin #right table.results td.active {
	background-color:#555;
	color:#fff;
}

body.ModelAdmin #right .tab {
	overflow: auto;
	padding-bottom: 20px;
}

body.ModelAdmin #Form_ImportForm dt {
	float: left;
	width: 10em;
	margin-right: 2em;
}

body.ModelAdmin #statusMessage {
	position: fixed !important;
	position: absolute;
	left: auto !important;
	bottom: 35px !important;
}

/* Form */
body.ModelAdmin #right .ajaxActions {
	position: fixed !important;
	position: absolute;
	right: 30px !important;
	bottom: 35px !important;
}

.tab h3 {
	margin-top: 10px;
	font-size: 1.2em;
}

form .message {
	font-size: 1em;
	margin: .3em 0;
	padding: 0.3em;
}

